--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1"
   },
   "scripts": {
     "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC"
